Add JWT_SECRET env var and fix PostgreSQL session store
- Added JWT_SECRET to env.example as required production variable
- Created migration for user_sessions table (011_create_user_sessions_table.sql)
- Improved session.ts with better error handling and logging
- Updated DIGITALOCEAN_DEPLOYMENT.md with JWT_SECRET instructions

--- a/env.example
+++ b/env.example
@@ -19,9 +19,18 @@ DATABASE_URL=postgresql://clinicuser:clinic_dev_2024@localhost:5434/clinicconnec
 NODE_ENV=development
 PORT=5001
 
-# Session secret - CHANGE THIS IN PRODUCTION!
-# Generate with: openssl rand -base64 32
-SESSION_SECRET=change-this-to-a-secure-random-string
+# ===========================================
+# SECURITY SECRETS (REQUIRED FOR PRODUCTION)
+# ===========================================
+# Generate secure secrets with: openssl rand -base64 32
+
+# JWT Secret - Used for API token authentication
+# IMPORTANT: If not set, tokens will be invalidated on server restart
+JWT_SECRET=change-this-to-a-secure-random-string
+
+# Session Secret - Used for cookie-based sessions
+# IMPORTANT: If not set, sessions will not persist across restarts
+SESSION_SECRET=change-this-to-another-secure-random-string
 
 # ===========================================
 # DATABASE CREDENTIALS (for Docker Compose)
