--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -11,26 +11,26 @@ services:
   - name: web
     # Build from Dockerfile
     dockerfile_path: Dockerfile.optimized
-    
+
     # Or use pre-built image from registry
     # image:
     #   registry_type: DOCR
     #   repository: clinicconnect
     #   tag: latest
-    
+
     # GitHub repository
     github:
-      repo: lacson1/clinicconnect-2
+      repo: lacson1/bluequeehealthcare
       branch: main
       deploy_on_push: true
-    
+
     # Instance configuration
     instance_count: 1
-    instance_size_slug: basic-xxs  # $5/mo, upgrade as needed
-    
+    instance_size_slug: basic-xxs # $5/mo, upgrade as needed
+
     # HTTP settings
     http_port: 5001
-    
+
     # Health check
     health_check:
       http_path: /api/health
@@ -39,7 +39,7 @@ services:
       timeout_seconds: 10
       success_threshold: 1
       failure_threshold: 3
-    
+
     # Environment variables
     envs:
       - key: NODE_ENV
@@ -72,7 +72,7 @@ services:
         scope: RUN_TIME
         type: SECRET
         value: ""
-    
+
     # Routes
     routes:
       - path: /
@@ -84,7 +84,7 @@ databases:
   - name: db
     engine: PG
     version: "16"
-    size: db-s-dev-database  # Free dev database, or db-s-1vcpu-1gb for production ($15/mo)
+    size: db-s-dev-database # Free dev database, or db-s-1vcpu-1gb for production ($15/mo)
     num_nodes: 1
 
 # ============================================
@@ -93,7 +93,6 @@ databases:
 alerts:
   - rule: DEPLOYMENT_FAILED
   - rule: DOMAIN_FAILED
-
 # ============================================
 # Ingress (Domain Configuration)
 # ============================================
