Fix Cloud Run startup timeout issues
- Server now listens immediately before full initialization
- Early health check endpoints respond before middleware loads
- Dynamic imports prevent blocking on database connection
- Added timeout for drizzle-kit migrations (30s)
- Added SKIP_MIGRATIONS option for faster cold starts
- Made session store initialization more resilient
- Added coreutils to Docker for timeout command
- Added explicit PORT=8080 and cpu-boost to Cloud Run config

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -85,15 +85,20 @@ steps:
       - '${_MIN_INSTANCES}'
       - '--max-instances'
       - '${_MAX_INSTANCES}'
-      # Startup
+      # Request timeout (how long a single request can take)
       - '--timeout'
       - '300s'
-      # Cloud SQL connection (if provided)
+      # Startup CPU boost for faster cold starts
+      - '--cpu-boost'
+      # Cloud SQL connection
       - '--add-cloudsql-instances'
       - '${_CLOUD_SQL_CONNECTION}'
+      # Port configuration - explicit is better
+      - '--port'
+      - '8080'
       # Environment variables
       - '--set-env-vars'
-      - 'NODE_ENV=production'
+      - 'NODE_ENV=production,PORT=8080,SKIP_MIGRATIONS=true'
       # Secrets from Secret Manager
       - '--set-secrets'
       - 'DATABASE_URL=DATABASE_URL:latest,SESSION_SECRET=SESSION_SECRET:latest'
